# dio-chatbot

./: .gitattributes  Dockerfile  Readme.md  db.sqlite3  db.sqlite3-wal  docker-compose.yml  example.py  main.py  pyproject.toml  requirements.txt
.docker/data/: dump.rdb
.docker/data/appendonlydir/: appendonly.aof.1.base.rdb
data/processed/: price_list.csv  price_list.txt
notebooks/: price_list.ipynb  read_csv.ipynb
prompts/: decision.txt  retrieval_description.txt  system.txt  system_test.txt
raw/: price_1c.xls
scripts/: create_sqlite_db.py  elastic_load_docs.py  retrieve.py
src/: settings.py
src/ai_agent/: __init__.py  base_agent.py  example.py  react_agent.py  state.py  states.py  utils.py
src/ai_agent/nodes/: __init__.py  base_node.py  clarification_node.py  decision_node.py  finalize_node.py  generation_node.py  retrieval_node.py  summarization_node.py
src/ai_agent/schemas/: __init__.py  clarification.py  context_reply.py  decision.py
src/ai_agent/tools/: __init__.py  retrieval_tool.py  retrieve_tool.py  search_product_tool.py
src/core/entities/: __init__.py  document.py  price_list.py  user.py
src/core/use_cases/: chat_assistant.py  chatbot_use_case.py
src/database/models/: __init__.py  chat_model.py  message_model.py  user_model.py
src/database/types/: __init__.py  roles_enum.py
src/di/: container.py
src/di/providers/: __init__.py  bot_provider.py  chat_assistant_provider.py  chatbot_provider.py  langchain_provider.py  service_provider.py
src/handlers/: __init__.py  message_saver_handler.py
src/http/: http_requests.py
src/http/responses/: base_response.py  json_response.py  text_response.py
src/llms/yandex_gpt/: __init__.py  api.py  base.py  chat_model.py  consts.py  utils.py  yandex_gpt_chat_model.py  (+2 more)
src/misc/: files.py
src/redis/: __init__.py  redis_client.py  redis_connection.py  redis_crud.py
src/services/: __init__.py  chat_history.py
src/utils/: __init__.py  documents_to_store_uploader.py  file_loader.py  file_to_documents_loader.py
src/yandex_gpt/: api.py  base.py  chat_model.py  constants.py  utils.py
templates/: chat.html  index.html
(+31 files in other folders)
