[project]
name = "diomanagerbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "aioredis==2.0.1",
    "asynctempfile>=0.5.0",
    "dishka>=1.5.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-elasticsearch>=0.3.2",
    "langchain-gigachat>=0.3.9",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.1",
    "langgraph==0.3.5",
    "langgraph-checkpoint==2.0.21",
    "langgraph-checkpoint-postgres==2.0.19",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "litestar>=2.15.2",
    "ollama>=0.4.7",
    "psycopg>=3.2.6",
    "psycopg-pool>=3.2.6",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "streamlit>=1.44.1",
    "transformers>=4.51.0",
    "unstructured>=0.17.2",
    "uvicorn[standard]>=0.34.0",
    "xlrd>=2.0.1",
    "yandex-chain>=0.0.4",
    "yandex-cloud-ml-sdk>=0.7.0",
    "yandexcloud>=0.337.0",
]
